<resources>
    <string name="app_name">Taara</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="account_information">ACCOUNT INFORMATION</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="taara_string_splash_screen_logo">Taara @string/splash_screen_logo</string>
    <string name="email">Email</string>
    <string name="cart">CART</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="phone">Phone</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google">Google</string>
    <string name="tuskys_moi_avenue">Tuskys Moi Avenue</string>
    <string name="store_string_profile_pic">store @string/profile_pic</string>
    <string name="check_in">CHECK IN</string>
    <string name="ok">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="invalid_login">Invalid log in details.Please try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out_button">Log Out button</string>
    <string name="not_registered_yet_sign_up_instead">Not registered yet? Sign Up instead</string>
    <string name="already_registerd_log_in_instead">Already Registerd? Log in instead</string>
    <string name="logo">Logo</string>
    <string name="unit_price_kshs_20">Unit price: kshs 20</string>
    <string name="vat_16">Vat: 16%</string>
    <string name="colgate_herbal_200ml">COLGATE HERBAL 200ML</string>
    <string name="remove">REMOVE</string>
    <string name="quantuty">quantity</string>
    <string name="todo">TODO</string>
    <string name="total">Total (kshs)</string>
    <string name="kshs_420">Kshs 420</string>
    <string name="checkout">Checkout</string>
    <string name="taara_credits">TAARA CREDITS</string>
    <string name="mpesa">MPESA</string>
    <string name="credit_card">CREDIT CARD</string>
    <string name="add_item">ADD ITEM</string>
    <string name="item_id">Item Id</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="_20">20</string>
    <string name="vat">VAT:</string>
    <string name="user_icon">user Icon</string>
    <string name="phone_no">Phone no</string>
    <string name="for_now_only_your_names_and_phone_can_be_dited_locally_the_rest_will_be_made_available_soon_kindly_bear_with_us">For now, only your names and phone can be edited locally.The rest will be made available soon. Kindly bear with us..</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_address_found">no addresses found</string>
    <string name="address_found">address found</string>
    <string name="go_on">GO ON ANYWAY</string>
    <string name="confirm_payment_of_kshs">Confirm Payment of kshs</string>
    <string name="_130000">130000</string>
    <string name="kshs">Kshs  </string>
    <string name="_16">16%</string>
    <string name="unit_price">Unit Price:</string>
</resources>
