<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".AccountInfo"
        android:id="@+id/layVerticalAcct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="7">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@color/colorPrimaryDark"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        android:id="@+id/relativeLayout2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="380dp"
            android:layout_height="36dp"
            android:gravity="top|center_horizontal"
            android:paddingTop="10sp"
            android:text="@string/account_information"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnLogOut"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:clickable="true"
            android:contentDescription="@string/log_out_button"
            android:focusable="true"
            android:minHeight="100dp"
            android:minWidth="100dp"
            android:onClick="logOut"
            android:padding="8dp"
            android:src="@drawable/padlock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-70dp"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/todo"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-70dp"
            android:gravity="center"
            android:text="@string/todo"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/txtName"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/btnEditProfile"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="54dp"
            android:contentDescription="@string/edit_profile"
            app:srcCompat="@drawable/edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnEditProfile"
            android:layout_below="@+id/btnEditProfile"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/edit_profile"
            android:textColor="@color/textDark"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/btnStartShopping"
            android:layout_width="73dp"
            android:layout_height="68dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="54dp"
            android:clickable="true"
            android:contentDescription="@string/start_shopping"
            android:onClick="startShopping"
            app:srcCompat="@drawable/begin_shopping"
            android:focusable="true" />

        <TextView
            android:id="@+id/txtStartShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/btnEditProfile"
            android:layout_marginEnd="33dp"
            android:gravity="center"
            android:padding="5sp"
            android:text="@string/start_shopping"
            android:textColor="@color/textDark"
            android:textSize="15sp" />
    </RelativeLayout>

    </LinearLayout>
